<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical">

    <sapotero.rxtest.views.custom.stepper.internal.TabsContainer
        android:id="@+id/ms_stepTabsContainer"
        style="@style/MSStepStabsContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <sapotero.rxtest.views.custom.stepper.internal.NonSwipeableViewPager
        android:id="@+id/ms_stepPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <RelativeLayout
        android:id="@+id/ms_stepNavigation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ms_bottom_navigation_bar_height"
        tools:background="@color/md_grey_100">

        <!--style="@style/MSNavBarButton"-->
        <Button
            android:id="@+id/ms_stepPrevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:drawableLeft="@drawable/ic_chevron_start"
            android:drawableStart="@drawable/ic_chevron_start"
            tools:text="@string/ms_back"
            tools:textColor="@color/ms_bottomNavigationButtonTextColor"
            style="@style/Widget.AppCompat.Button.Borderless"
            />

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true">

            <sapotero.rxtest.views.custom.stepper.internal.DottedProgressBar
                android:id="@+id/ms_stepDottedProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />

            <sapotero.rxtest.views.custom.stepper.internal.ColorableProgressBar
                android:id="@+id/ms_stepProgressBar"
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="@dimen/ms_progress_bar_width"
                android:layout_height="@dimen/ms_progress_bar_height"
                android:indeterminate="false"
                android:padding="0dp"
                android:progress="1"
                android:visibility="gone"
                tools:visibility="visible" />

        </FrameLayout>

        <!--style="@style/MSNavBarButton"-->
        <sapotero.rxtest.views.custom.stepper.internal.RightNavigationButton
            android:id="@+id/ms_stepNextButton"

            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            tools:drawableEnd="@drawable/ic_chevron_end"
            tools:drawableRight="@drawable/ic_chevron_end"
            tools:text="@string/ms_next"
            tools:textColor="@color/ms_bottomNavigationButtonTextColor"
            tools:visibility="gone" />

        <!--style="@style/MSNavBarButton"-->
        <sapotero.rxtest.views.custom.stepper.internal.RightNavigationButton
            android:id="@+id/ms_stepCompleteButton"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:alpha="0"
            android:visibility="gone"
            tools:text="@string/ms_complete"
            tools:textColor="@color/md_red_900"
            tools:visibility="visible" />

    </RelativeLayout>

</merge>