<resources>
    <string name="app_name">СЭД</string>
    <string name="username_hinf">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="login_button">Войти</string>

    <string-array name="empty_array"/>

    <string-array name="settings_view_start_page">
        <item>На рассмотрение</item>
        <item>Первичное рассмотрение</item>
...
    <string name="constructor_create_no_answer">Редактор - Без ответа </string>
    <string name="constructor_create_to_favorites"> Редактор- В избранное </string>


    <string name="action_settings">Выполняется проверка пин кода…</string>
    <string name="drawer_item_journals">Журналы</string>
    <string name="drawer_item_settings">Настройки</string>
    <string name="drawer_item_settings_account">Учетная запись/Отображение</string>
    <string name="drawer_item_settings_config">Отображение</string>
    <string name="drawer_item_settings_templates">Шаблоны резолюций</string>
    <string name="drawer_item_settings_templates_off">Шаблоны отклонения</string>
    <string name="drawer_item_debug">Отладка</string>
    <string name="drawer_item_settings_log">Очередь задач</string>
...

    <string name="stepper_loader_user">Загрузка данных о пользователе</string>
    <string name="stepper_loader_list">Загрузка списка задач</string>
    <string name="stepper_loader_info">Загрузка данных по задачам</string>


    <string name="vertical_form_stepper_form_continue">Продолжить</string>
    <string name="vertical_form_stepper_form_last_step">Завершение</string>
    <string name="vertical_form_stepper_form_confirm_button">Начать работу</string>
    <string name="vertical_form_stepper_form_discard_question">Discard data?</string>
    <string name="vertical_form_stepper_form_info_will_be_lost">All the information you have given will be lost</string>
    <string name="vertical_form_stepper_form_discard_cancel">Cancel</string>
    <string name="vertical_form_stepper_form_discard">Discard</string>
...
    <string name="dialog_cert_positive">Войти</string>
    <string name="dialog_cert_negative">Отмена</string>
    <string name="dialog_cert_description">Вставьте ключ с Вашей электронной цифрой подписью и введите ПИН-код</string>


    <string name="ms_back">Назад</string>
    <string name="ms_next">Далее</string>
    <string name="ms_complete">Завершить</string>


    <string name="stepper_choose_auth">Начало</string>
    <string name="stepper_auth">Авторизация</string>
    <string name="stepper_load_data">Загрузка данных, подождите</string>
    <string name="stepper_end">Завершение</string>
...
