<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/activity_info_wrapper"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="sapotero.rxtest.views.activities.InfoActivity"
    android:background="@color/md_grey_200"
    >

    <sapotero.rxtest.views.custom.CircleLeftArrow
        android:clickable="true"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:id="@+id/activity_info_left_button"
        android:padding="4dp"
        android:layout_marginTop="440dp"
        android:layout_marginStart="@dimen/half_date_offset"
        android:visibility="gone"
        />

    <sapotero.rxtest.views.custom.CircleRightArrow
        android:clickable="true"
        android:layout_width="54dp"
        android:layout_height="54dp"
        android:id="@+id/activity_info_right_button"
        android:padding="4dp"
        android:layout_marginTop="440dp"
        android:layout_marginEnd="@dimen/half_date_offset"
        android:layout_alignParentEnd="true"
        android:visibility="gone"
        />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:paddingTop="@dimen/half_date_offset"
        android:transitionName="actionBar"
        android:minHeight="?attr/actionBarSize"
        android:background="@drawable/toolbar_background"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:theme="@style/ToolbarColoredBackArrow"
        android:elevation="8dp"/>

    <!--android:layout_marginStart="64dp"-->
    <!--android:layout_marginEnd="64dp"-->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/activity_vertical_margin"



        android:layout_below="@+id/toolbar">
        <!--@dimen/activity_horizontal_margin" -->


        <!--android:layout_marginStart="@dimen/half_date_offset"-->


        <LinearLayout
            android:id="@+id/activity_info_preview_container"
            android:orientation="vertical"
            android:layout_width="350dp"
            android:layout_height="match_parent"
            android:layout_above="@+id/activity_info_decision_spinner"
            >
            <!--android:background="@drawable/corner_background"-->
            <!--android:padding="@dimen/date_offset"-->

        </LinearLayout>

        <Space
            android:layout_width="@dimen/half_date_offset"
            android:layout_height="match_parent"/>

        <android.support.v7.widget.CardView
            android:layout_margin="@dimen/half_date_offset"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/activity_info_next_document"
                    android:src="@drawable/arrow_left_tab"
                    android:layout_width="48dp"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_height="wrap_content"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
                <ImageButton
                    android:id="@+id/activity_info_prev_document"
                    android:src="@drawable/arrow_right_tab"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:foreground="?android:attr/selectableItemBackground"
                    android:layout_alignParentEnd="true"

                    style="@style/Widget.AppCompat.Button.Borderless"/>


                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="80.53"
                    android:weightSum="1">

                    <android.support.design.widget.TabLayout
                        android:layout_height="48dp"
                        android:id="@+id/tabs"
                        android:layout_gravity="center"
                        android:layout_width="778dp">
                    </android.support.design.widget.TabLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/md_grey_100"
                        />

                    <sapotero.rxtest.views.custom.ViewPagerFixed
                        android:id="@+id/tab_main"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        />
                    <!--android:background="@drawable/corner_background"-->
                    <!--android:padding="@dimen/half_date_offset"-->
                </LinearLayout>
            </RelativeLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_preview_decision"
        android:layout_width="380dp"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:padding="@dimen/date_offset">

        <android.support.v7.widget.CardView
            android:layout_margin="@dimen/half_date_offset"
            android:elevation="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:layout_gravity="center"
                />


        </android.support.v7.widget.CardView>

    </FrameLayout>

</RelativeLayout>
