<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="sapotero.rxtest.views.activities.LoginActivity"

    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:gravity="center"

    android:weightSum="1"
    android:baselineAligned="false"
    android:background="@color/md_grey_100"
    android:padding="32dp"
    android:clipChildren="true"
    android:clipToPadding="true"
    >


    <sapotero.rxtest.views.custom.stepper.StepperLayout
        android:layout_weight="1"
        android:layout_margin="@dimen/date_offset"
        android:background="@color/md_white_1000"
        android:id="@+id/stepperLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:ms_stepperType="tabs"
        app:ms_completeButtonColor="@color/md_blue_600"
        android:elevation="2dp"
        android:clipToPadding="true"
        android:clipChildren="true"
        />


</RelativeLayout>
