...
            />

        <TextView
            android:text="@string/settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/stepper_auth_settings"
            android:padding="@dimen/half_date_offset"
            android:textColor="@color/md_blue_300"
            android:soundEffectsEnabled="false"
            tools:textStyle="italic"/>

        <LinearLayout
...
